manifest/deployment-nginx.yml
# deploy to usernode pool
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-ns
  labels:
    app: nginx
spec:
    replicas: 1
    selector:
      matchLabels:
        app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        # nodeSelector:
        #  nodepool: userpool
        containers:
        - name: nginx
          # Replace 1.0.0 with the version of your application that you are building
          image: vhacr.azurecr.io/prisma:b5870c4962f8304e0b001969634aee4b8a50500c
          # set image PullPolicy to Always to ensure that the latest image is pulled on deployment
          imagePullPolicy: Always
          
          resources:
            # 128Mi bytes of memory and 250 millicpu (1/4 cpu core)
            requests:
              memory: "128Mi"
              cpu: "250m"
            # 256Mi bytes of memory and 500 millicpu (1/2 cpu core)
            limits:
                memory: "256Mi"
                cpu: "500m"
          ports:
          - containerPort: 3000
