manifest/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-svc
  namespace: nginx-ns
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
  sessionAffinity: None
