manifest/svc-prisma-staging.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prisma
  name: prisma-dev-svc
  namespace: prisma-ns
spec:
  type: ClusterIP
  selector:
    app: prisma
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
  sessionAffinity: None
