manifest/learn80-poc-443-gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: infra-ns
  annotations:
    alb.networking.azure.io/alb-id: "/subscriptions/df2f960a-8e92-40ec-a2b8-0a2923d3c074/resourcegroups/agfc-rg/providers/Microsoft.ServiceNetworking/trafficControllers/alb-poc"
spec:
  gatewayClassName: azure-alb-external
  listeners:
  
  - name: nginx-listener
    hostname: "learn-nadeem.xyz"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"

  - name: prisma-listener
    hostname: "www.pocvivahealth.com"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
    tls:
      mode: Terminate
      certificateRefs:
      - kind : Secret
        group: ""
        name: poc-tls-secret
  
  addresses:
  - type: alb.networking.azure.io/alb-frontend
    value: poc-fe
