manifest/route-prisma-prod.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: prisma-prod-route
  namespace: prisma-ns
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra-ns
  hostnames:
    - "www.pocvivahealth.com"
  rules:
  
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prisma-prod-svc
      namespace: prisma-ns
      port: 3000
